WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104844
[WK2 NetworkProcess] Crashes in NetworkResourceLoadScheduler::receivedRedirect
https://bugs.webkit.org/show_bug.cgi?id=104844
Summary
[WK2 NetworkProcess] Crashes in NetworkResourceLoadScheduler::receivedRedirect
Alexey Proskuryakov
Reported
2012-12-12 14:25:01 PST
I don't see any reason to expect that resource identifier is still there when handling this message. Looks like a load can be canceled already. <
rdar://problem/12862512
>
Attachments
proposed fix
(2.49 KB, patch)
2012-12-12 14:29 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-12-12 14:29:14 PST
Created
attachment 179127
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-12-12 14:33:15 PST
Committed <
http://trac.webkit.org/changeset/137515
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug