        <rdar://problem/12862512> Crashes in NetworkResourceLoadScheduler::receivedRedirect         https://bugs.webkit.org/show_bug.cgi?id=104844

Reviewed by Sam Weinig.

        * NetworkProcess/NetworkResourceLoadScheduler.cpp:
        (WebKit::NetworkResourceLoadScheduler::receivedRedirect): The load may be already
        canceled.

        * WebProcess/Network/WebResourceLoader.cpp:
        (WebKit::WebResourceLoader::didReceiveResponse): Expanded logging a little.



Canonical link: https://commits.webkit.org/123069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137515 268f45cc-cd09-0410-ab3c-d52691b4dbfc